fix: replace sun.reflect.ReflectionFactory with sun.misc.Unsafe for entity instantiation
The Jackson removal (9377c929) dropped the ReflectionFactory fallback in
ObjectMapperImpl.deserialize(). This restores the ability to instantiate
entity classes without a no-arg constructor, but uses Unsafe.allocateInstance()
instead of the previously used ReflectionFactory.newConstructorForSerialization().

Why Unsafe instead of ReflectionFactory:
- sun.reflect.ReflectionFactory is an internal API with no stability guarantees
  and has been progressively hidden in recent JDK releases
- sun.misc.Unsafe.allocateInstance() is the de facto standard for constructor-free
  instantiation, used by Spring, Jackson, Gson, Kryo, Hibernate/Objenesis, and Netty
- JEP 471 (JDK 23) deprecates Unsafe's memory-access methods but explicitly does NOT
  cover allocateInstance() — there is no replacement API yet
- Both are internal APIs, but Unsafe has a much larger ecosystem dependency and will
  not be removed until a proper public replacement exists

The recommended approach is to provide a no-arg constructor (can be private) on all
@Entity and @Embedded classes — this avoids the Unsafe path entirely.

Also removes the unused threadPid ThreadLocal from MorphiumId and cleans up
associated commented-out code.

Supersedes PR #136 which restored the ReflectionFactory approach.